[package]
name = "rbox"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

log = "0.4"
simple_logger = "5.0"